# google-adk-single-agents

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analise_sentimento/: .env-example  agent.py  tools.py
chef/: agent.py
chef_cozinha/: .env-example  agent.py
search_csv/: agent.py
search_web/: agent.py
search_web_finance/: agent.py
